[package]
name = "outro_08"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = {version = "2"}
anyhow = { version = "1" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.6", features = ["json"] }
reqwest = {version = "0.12.23", features = ["json"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = {version = "1.0.145", features = []}

