[package]
name = "outro_08"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = {version = "2"}
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
reqwest = {version = "0.12", features = ["json"] }
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", features = []}
url = { version = "2.5", features = [] }

